@@ -1,3 +1,11 @@
+2013-01-04  Tobias Burnus  <burnus@net-b.de>
+
+	PR fortran/55854
+	PR fortran/55763
+	* gfortran.dg/unlimited_polymorphic_3.f03: Remove invalid code.
+	* gfortran.dg/unlimited_polymorphic_7.f90: New.
+	* gfortran.dg/unlimited_polymorphic_8.f90: New.
+
 2013-01-03  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	* gcc.dg/torture/tls/tls-reload-1.c (main): Make testing more thorough.
